# InternshipTask

./: .gitignore  CMakeLists.txt  README.md  run_tests_debug.bat  run_tests_release.bat
Task1/: CMakeLists.txt
Task1/Code/: compress.hpp  main.cpp  trie.hpp
Task1/Tests/: CMakeLists.txt  main.cpp  vcpkg.json
Task2/: CMakeLists.txt  vcpkg.json
Task2/Code/: main.cpp
Task2/Code/Render/: renderer.cpp  renderer.hpp  triangle_drawer.cpp  triangle_drawer.hpp
Task2/Code/Utilities/: math.cpp  math.hpp  structures.hpp
Task2/Tests/: CMakeLists.txt  main.cpp  vcpkg.json
Task3/: CMakeLists.txt
Task3/Code/: calculate.hpp  main.cpp
Task3/Tests/: CMakeLists.txt  main.cpp  vcpkg.json
